fix(style): changed overflow of TableOfContent

--- a/src/components/_blogPost/TableOfContent/TableOfContent.module.scss
+++ b/src/components/_blogPost/TableOfContent/TableOfContent.module.scss
@@ -16,7 +16,7 @@
   }
 
   .list {
-    overflow-y: scroll;
+    overflow-y: auto;
     max-height: 200px;
     padding: 10px 10px 10px 24px;
     direction: rtl;
